--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>METE 351 Quiz</title>
+    <title>METE 451 Quiz</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -59,134 +59,124 @@
 
         const questions = [
           {
-            id: 1,
+            id: 20,
             type: "mcq",
-            question:
-              "If a gold ore containing pyrrhotite (FeS) is not pre-treated via roasting, what is the specific chemical consequence during the cyanidation process?",
+            question: "Ore testing involves which of the following activities?",
             options: [
-              "Gold becomes naturally insoluble in all lixiviants.",
-              "Excessive reagent consumption occurs through the formation of Fe(CN)64− complexes.",
-              "The formation of H2S gas accelerates gold dissolution rates.",
-              "The solution potential (Eh) shifts to an unstable aqueous region.",
+              "Market supply forecasting",
+              "Mineralogical examination and laboratory testing",
+              "Detailed structural engineering of the office building",
+              "Designing the plant's recruitment strategy",
             ],
-            correctAnswer: "Excessive reagent consumption occurs through the formation of Fe(CN)64− complexes.",
+            correctAnswer: "Mineralogical examination and laboratory testing",
           },
           {
-            id: 2,
+            id: 21,
             type: "mcq",
-            question:
-              "Which unit process is specifically categorized as a method for the concentration or purification of a metal-bearing solution?",
+            question: "Which factor determines the scale of process technology that can be applied?",
             options: [
-              "Comminution",
-              "Solvent extraction",
-              "Pressure leaching",
-              "Roasting",
+              "The climate of the region",
+              "Ore grade and reserves",
+              "The availability of unskilled labor",
+              "The distance to the nearest airport",
             ],
-            correctAnswer: "Solvent extraction",
+            correctAnswer: "Ore grade and reserves",
           },
           {
-            id: 3,
+            id: 22,
             type: "mcq",
-            question:
-              "Which of the following is categorized as a complexing agent lixiviant used to stabilize metals in an aqueous medium?",
+            question: "For low-grade ores, the flowsheet should ideally be:",
             options: [
-              "Sulphuric acid",
-              "Sodium cyanide",
-              "Caustic soda",
-              "Manganese (IV) dioxide",
+              "Extremely complex to maximize every gram",
+              "Simple with low-cost treatment technology",
+              "Identical to high-grade ore flowsheets",
+              "Based on the most expensive technology available",
             ],
-            correctAnswer: "Sodium cyanide",
+            correctAnswer: "Simple with low-cost treatment technology",
           },
           {
-            id: 4,
+            id: 23,
             type: "mcq",
-            question:
-              "In the major steps of a hydrometallurgical process, which unit operation must immediately follow the leaching stage?",
+            question: '"Variations in ore hardness" specifically affect which processing parameter?',
             options: [
-              "Value metal recovery",
-              "Leachate / Leach Liquor Separation",
-              "Ore Preparation",
-              "Comminution",
+              "The pH of the leaching solution",
+              "Grindability and work index",
+              "The market price of the metal",
+              "The environmental tax rate",
             ],
-            correctAnswer: "Leachate / Leach Liquor Separation",
+            correctAnswer: "Grindability and work index",
           },
           {
-            id: 5,
+            id: 24,
             type: "mcq",
-            question:
-              'For high-grade ores that possess fast leaching kinetics but are "slimy," which method is most appropriate for extraction?',
+            question: "How can mineralogical problems like complex sulphide content be reduced at the processing stage?",
             options: [
-              "In situ leaching",
-              "Dump leaching",
-              "Agitation leaching",
-              "Vat leaching",
+              "By ignoring the sulphide content",
+              "Through blending different ore types",
+              "By increasing the height of the thickener",
+              "By reducing the number of flotation cells",
             ],
-            correctAnswer: "Agitation leaching",
+            correctAnswer: "Through blending different ore types",
           },
           {
-            id: 6,
+            id: 25,
             type: "mcq",
-            question:
-              "Which specific acid is identified in the sources for its unique ability to act as a reducing acid (reductant)?",
+            question: '"Metallurgical response" determines the economics of the process by affecting:',
             options: [
-              "Hydrofluoric acid",
-              "Nitric acid",
-              "Sulphurous acid",
-              "Aqua regia",
+              "The local political environment",
+              "Recovery and quality of the product",
+              "The archaeological significance of the site",
+              "The number of trucks required for transport",
             ],
-            correctAnswer: "Sulphurous acid",
+            correctAnswer: "Recovery and quality of the product",
           },
           {
-            id: 7,
+            id: 26,
             type: "mcq",
-            question:
-              "Why is roasting pyrrhotite (FeS) in an oxygen atmosphere considered a critical pre-treatment step for gold extraction?",
+            question: 'Which of the following is a "Geographical" factor in process selection?',
             options: [
-              "To decrease the porosity of the ore.",
-              "To transform FeS into hematite (Fe2O3), which is insoluble in cyanide.",
-              "To convert elemental gold into a soluble telluride form.",
-              "To increase the consumption of slaked lime.",
+              "Ore variability",
+              "Climate, topography, and infrastructure",
+              "Mineral composition",
+              "Reagent concentration",
             ],
-            correctAnswer: "To transform FeS into hematite (Fe2O3), which is insoluble in cyanide.",
+            correctAnswer: "Climate, topography, and infrastructure",
           },
           {
-            id: 8,
+            id: 27,
             type: "mcq",
-            question:
-              "According to the chemical principles of gold extraction, which product is formed when elemental gold (Au) is dissolved in a cyanide lixiviant?",
+            question: "Process selection must consider the environmental impact on which of the following?",
             options: [
-              "Au(CN)2−",
-              "Au(CN)43−",
-              "AuCN(s)",
-              "AuTe2",
+              "The company's stock price",
+              "Water quality, air quality, and flora/fauna",
+              "The size of the administrative office",
+              "The brand of grinding media used",
             ],
-            correctAnswer: "Au(CN)2−",
+            correctAnswer: "Water quality, air quality, and flora/fauna",
           },
           {
-            id: 9,
+            id: 28,
             type: "mcq",
-            question:
-              "For a leaching process to be considered economically feasible, which of these is an essential feature (rather than just desirable)?",
+            question: "Why have roasting plants been closed in some mining companies?",
             options: [
-              "The solvent must be completely non-toxic.",
-              "The valuable metal must be recoverable economically from the solvent.",
-              "The ore must be free of all silicate gangue.",
-              "The process must operate at room temperature.",
+              "They were too cheap to operate",
+              "Community pressure and environmental unfriendliness",
+              "Lack of skilled labor to operate them",
+              "They produced too much gold",
             ],
-            correctAnswer: "The valuable metal must be recoverable economically from the solvent.",
+            correctAnswer: "Community pressure and environmental unfriendliness",
           },
           {
-            id: 10,
+            id: 29,
             type: "mcq",
-            question:
-              "According to the basic principles of metal extraction, under which specific electrochemical conditions are most metals found to be soluble?",
+            question: "The availability of new technology has made which of the following economically viable?",
             options: [
-              "Moderate pH and low potentials exclusively.",
-              "Very low pH / high potentials OR very high pH / moderate potentials.",
-              "Neutral pH and high potentials.",
-              "High pH and high potentials only.",
+              "Mining in outer space",
+              "Treating low-grade ores previously regarded as tailings",
+              "Using manual labor for all grinding tasks",
+              "Reducing the plant size to a single room",
             ],
-            correctAnswer: "Very low pH / high potentials OR very high pH / moderate potentials.",
+            correctAnswer: "Treating low-grade ores previously regarded as tailings",
           },
         ];
 
@@ -418,7 +408,7 @@
                 <div className="bg-white rounded-lg shadow-md p-6 mb-6">
                   <div className="flex justify-between items-center mb-4">
                     <h2 className="text-2xl font-bold">
-                      Admin Dashboard - METE 351 Quiz
+                      Admin Dashboard - METE 451 Quiz
                     </h2>
                     <div className="flex gap-2">
                       <button
@@ -580,7 +570,7 @@
                   <div className="text-center mb-6">
                     <Lock className="mx-auto h-12 w-12 text-indigo-600 mb-3" />
                     <h1 className="text-3xl font-bold text-gray-800 mb-2">
-                      METE 351 Quiz
+                      METE 451 Quiz
                     </h1>
                     <p className="text-gray-600">Metallurgical Engineering</p>
                   </div>
@@ -820,4 +810,3 @@
   </body>
 
 </html>
-
