--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>METE 451 Quiz</title>
+    <title>METE 151 Quiz</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -59,124 +59,136 @@
 
         const questions = [
           {
-            id: 20,
+            id: 30,
             type: "mcq",
-            question: "Ore testing involves which of the following activities?",
+            question: "An ore sample contains PbS. To prepare it for lead extraction, it should be heated in the presence of excess air. This process is:",
             options: [
-              "Market supply forecasting",
-              "Mineralogical examination and laboratory testing",
-              "Detailed structural engineering of the office building",
-              "Designing the plant's recruitment strategy",
+              "Calcination",
+              "Leaching",
+              "Roasting",
+              "Precipitation",
             ],
-            correctAnswer: "Mineralogical examination and laboratory testing",
+            correctAnswer: "Roasting",
           },
           {
-            id: 21,
+            id: 31,
             type: "mcq",
-            question: "Which factor determines the scale of process technology that can be applied?",
+            question: "Compare hydrometallurgy and pyrometallurgy. Which statement is true regarding their environmental/operational conditions?",
             options: [
-              "The climate of the region",
-              "Ore grade and reserves",
-              "The availability of unskilled labor",
-              "The distance to the nearest airport",
+              "Pyrometallurgy uses low temperatures; hydrometallurgy uses high heat.",
+              "Hydrometallurgy involves aqueous chemicals and low temperatures; pyrometallurgy involves thermal treatment and high temperatures.",
+              "Both require the absence of air at all times.",
+              "Hydrometallurgy is only for iron; pyrometallurgy is only for gold.",
             ],
-            correctAnswer: "Ore grade and reserves",
+            correctAnswer: "Hydrometallurgy involves aqueous chemicals and low temperatures; pyrometallurgy involves thermal treatment and high temperatures.",
           },
           {
-            id: 22,
+            id: 32,
             type: "mcq",
-            question: "For low-grade ores, the flowsheet should ideally be:",
+            question: "Why might a company choose hydrometallurgy over pyrometallurgy for a specific ore?",
             options: [
-              "Extremely complex to maximize every gram",
-              "Simple with low-cost treatment technology",
-              "Identical to high-grade ore flowsheets",
-              "Based on the most expensive technology available",
+              "The ore is a sulphide that needs to be melted.",
+              "The metal of interest can be selectively dissolved at low temperatures, potentially saving energy or handling complex low-grade ores.",
+              "Pyrometallurgy is only used for reactive metals like aluminum.",
+              "Hydrometallurgy produces more slag.",
             ],
-            correctAnswer: "Simple with low-cost treatment technology",
+            correctAnswer: "The metal of interest can be selectively dissolved at low temperatures, potentially saving energy or handling complex low-grade ores.",
           },
           {
-            id: 23,
+            id: 33,
             type: "mcq",
-            question: '"Variations in ore hardness" specifically affect which processing parameter?',
+            question: "Evaluate the necessity of refining after smelting. What is the most likely outcome if refining is skipped?",
             options: [
-              "The pH of the leaching solution",
-              "Grindability and work index",
-              "The market price of the metal",
-              "The environmental tax rate",
+              "The metal will be pure but liquid.",
+              "The metal will contain impurities that may affect its properties and industrial use.",
+              "The metal will turn back into ore.",
+              "The metal will become a gas.",
             ],
-            correctAnswer: "Grindability and work index",
+            correctAnswer: "The metal will contain impurities that may affect its properties and industrial use.",
           },
           {
-            id: 24,
+            id: 34,
             type: "mcq",
-            question: "How can mineralogical problems like complex sulphide content be reduced at the processing stage?",
+            question: "In the production of aluminum, electrowinning is performed on melts of their salts. Why is this categorized as electrometallurgy and not hydrometallurgy?",
             options: [
-              "By ignoring the sulphide content",
-              "Through blending different ore types",
-              "By increasing the height of the thickener",
-              "By reducing the number of flotation cells",
+              "Because it uses fire.",
+              "Because it uses electrical energy for extraction, even though it involves a melt rather than an aqueous solution.",
+              "Because aluminum is a noble metal.",
+              "It is actually a form of roasting.",
             ],
-            correctAnswer: "Through blending different ore types",
+            correctAnswer: "Because it uses electrical energy for extraction, even though it involves a melt rather than an aqueous solution.",
           },
           {
-            id: 25,
+            id: 35,
             type: "mcq",
-            question: '"Metallurgical response" determines the economics of the process by affecting:',
+            question: "A facility is extracting silver (Ag) from Ag₂S. Based on the source, which sequence is most logical?",
             options: [
-              "The local political environment",
-              "Recovery and quality of the product",
-              "The archaeological significance of the site",
-              "The number of trucks required for transport",
+              "Calcination followed by leaching.",
+              "Roasting to remove sulphur, potentially followed by electrorefining for purity.",
+              "Smelting with water.",
+              "Using a lixiviant to create slag.",
             ],
-            correctAnswer: "Recovery and quality of the product",
+            correctAnswer: "Roasting to remove sulphur, potentially followed by electrorefining for purity.",
           },
           {
-            id: 26,
+            id: 36,
             type: "mcq",
-            question: 'Which of the following is a "Geographical" factor in process selection?',
+            question: "Which of the following is a similarity between roasting and calcination?",
             options: [
-              "Ore variability",
-              "Climate, topography, and infrastructure",
-              "Mineral composition",
-              "Reagent concentration",
+              "Both require an absence of air.",
+              "Both are processes of heating the ore below its melting point to remove impurities.",
+              "Both produce the exact same gaseous byproduct.",
+              "Both are used exclusively for carbonate ores.",
             ],
-            correctAnswer: "Climate, topography, and infrastructure",
+            correctAnswer: "Both are processes of heating the ore below its melting point to remove impurities.",
           },
           {
-            id: 27,
+            id: 37,
             type: "mcq",
-            question: "Process selection must consider the environmental impact on which of the following?",
+            question: "Determine the correct classification for a process that uses gaseous reduction to recover metal from a leach liquor.",
             options: [
-              "The company's stock price",
-              "Water quality, air quality, and flora/fauna",
-              "The size of the administrative office",
-              "The brand of grinding media used",
+              "Pyrometallurgy",
+              "Hydrometallurgy (Metal Recovery stage)",
+              "Electrometallurgy",
+              "Mineral Processing",
             ],
-            correctAnswer: "Water quality, air quality, and flora/fauna",
+            correctAnswer: "Hydrometallurgy (Metal Recovery stage)",
           },
           {
-            id: 28,
+            id: 38,
             type: "mcq",
-            question: "Why have roasting plants been closed in some mining companies?",
+            question: "What is the significance of selective extraction in hydrometallurgy?",
             options: [
-              "They were too cheap to operate",
-              "Community pressure and environmental unfriendliness",
-              "Lack of skilled labor to operate them",
-              "They produced too much gold",
+              "It means only the gangue is dissolved.",
+              "It allows for the separation of the specific metal of interest from a mixture of other minerals in the ore.",
+              "It ensures that the metal is never pure.",
+              "It requires the use of coke as a solvent.",
             ],
-            correctAnswer: "Community pressure and environmental unfriendliness",
+            correctAnswer: "It allows for the separation of the specific metal of interest from a mixture of other minerals in the ore.",
           },
           {
-            id: 29,
+            id: 39,
             type: "mcq",
-            question: "The availability of new technology has made which of the following economically viable?",
+            question: "Synthesize the relationship between flux and slag. Which statement is correct?",
             options: [
-              "Mining in outer space",
-              "Treating low-grade ores previously regarded as tailings",
-              "Using manual labor for all grinding tasks",
-              "Reducing the plant size to a single room",
+              "Slag is added to the furnace to create flux.",
+              "Flux is a cleaning agent that reacts with impurities to form slag, which can then be separated from the metal.",
+              "Flux and slag are the same material at different temperatures.",
+              "Flux is a metal; slag is a gas.",
             ],
-            correctAnswer: "Treating low-grade ores previously regarded as tailings",
+            correctAnswer: "Flux is a cleaning agent that reacts with impurities to form slag, which can then be separated from the metal.",
+          },
+          {
+            id: 40,
+            type: "mcq",
+            question: "Which metallurgical branch would be most effective for purifying gold to ultra-high purity levels?",
+            options: [
+              "Calcination",
+              "Roasting",
+              "Electrometallurgy (Electrorefining)",
+              "Smelting",
+            ],
+            correctAnswer: "Electrometallurgy (Electrorefining)",
           },
         ];
 
@@ -408,7 +420,7 @@
                 <div className="bg-white rounded-lg shadow-md p-6 mb-6">
                   <div className="flex justify-between items-center mb-4">
                     <h2 className="text-2xl font-bold">
-                      Admin Dashboard - METE 451 Quiz
+                      Admin Dashboard - METE 151 Quiz
                     </h2>
                     <div className="flex gap-2">
                       <button
@@ -446,7 +458,7 @@
                             Highest Score
                           </p>
                           <p className="text-3xl font-bold text-green-700">
-                            {stats.highest}/10
+                            {stats.highest}/11
                           </p>
                         </div>
                         <div className="bg-yellow-50 rounded-lg p-4">
@@ -454,7 +466,7 @@
                             Average Score
                           </p>
                           <p className="text-3xl font-bold text-yellow-700">
-                            {stats.average}/10
+                            {stats.average}/11
                           </p>
                         </div>
                         <div className="bg-red-50 rounded-lg p-4">
@@ -462,7 +474,7 @@
                             Lowest Score
                           </p>
                           <p className="text-3xl font-bold text-red-700">
-                            {stats.lowest}/10
+                            {stats.lowest}/11
                           </p>
                         </div>
                       </div>
@@ -570,7 +582,7 @@
                   <div className="text-center mb-6">
                     <Lock className="mx-auto h-12 w-12 text-indigo-600 mb-3" />
                     <h1 className="text-3xl font-bold text-gray-800 mb-2">
-                      METE 451 Quiz
+                      METE 151 Quiz
                     </h1>
                     <p className="text-gray-600">Metallurgical Engineering</p>
                   </div>
@@ -581,7 +593,7 @@
                       <div className="text-sm text-yellow-700">
                         <p className="font-semibold mb-1">Quiz Rules:</p>
                         <ul className="list-disc list-inside space-y-1">
-                          <li>10 questions total</li>
+                          <li>11 questions total</li>
                           <li>20 seconds per question</li>
                           <li>Auto-advances when time expires</li>
                           <li>Tab switching: -0.5 points each</li>
