--- a/index.html
+++ b/index.html
@@ -59,141 +59,189 @@
 
         const questions = [
           {
-            id: 30,
+            id: 11,
             type: "mcq",
-            question: "An ore sample contains PbS. To prepare it for lead extraction, it should be heated in the presence of excess air. This process is:",
+            question: "Metallurgy combines principles from which three scientific fields to improve metal properties?",
             options: [
-              "Calcination",
-              "Leaching",
-              "Roasting",
-              "Precipitation",
+              "Biology, Geology, and Physics",
+              "Chemistry, Physics, and Materials Science",
+              "Engineering, Math, and History",
+              "Economics, Sociology, and Chemistry",
             ],
-            correctAnswer: "Roasting",
+            correctAnswer: "Chemistry, Physics, and Materials Science",
+          },
+          {
+            id: 12,
+            type: "mcq",
+            question: "Why was the discovery of Bronze a significant technological advancement?",
+            options: [
+              "It was easier to find than copper.",
+              "It allowed for stronger tools and weapons compared to pure copper.",
+              "It was used primarily for currency rather than tools.",
+              "It prevented the need for heat during the shaping process.",
+            ],
+            correctAnswer: "It allowed for stronger tools and weapons compared to pure copper.",
+          },
+          {
+            id: 13,
+            type: "mcq",
+            question: "Which extractive process specifically involves the use of fire to reduce ore into metal?",
+            options: [
+              "Hydrometallurgy",
+              "Electrometallurgy",
+              "Mineral Processing",
+              "Pyrometallurgy",
+            ],
+            correctAnswer: "Pyrometallurgy",
+          },
+          {
+            id: 14,
+            type: "mcq",
+            question: 'In traditional Ghanaian metallurgy, "Lost-wax casting" was used to create:',
+            options: [
+              "Large scale industrial pipes",
+              "Intricate gold jewelry and bronze figurines",
+              "Wrought iron bridges",
+              "Reinforced steel bars",
+            ],
+            correctAnswer: "Intricate gold jewelry and bronze figurines",
+          },
+          {
+            id: 15,
+            type: "mcq",
+            question: "The primary purpose of using superalloys in the aerospace industry is to:",
+            options: [
+              "Reduce the weight of the aircraft frame.",
+              "Enhance engine performance and heat resistance.",
+              "Provide better electrical conductivity.",
+              "Lower the cost of manufacturing.",
+            ],
+            correctAnswer: "Enhance engine performance and heat resistance.",
           },
           {
             id: 31,
             type: "mcq",
-            question: "Compare hydrometallurgy and pyrometallurgy. Which statement is true regarding their environmental/operational conditions?",
+            question: 'Compare the impact of the "Chalcolithic" and "Bronze Age" on ancient civilizations. The most significant difference was:',
             options: [
-              "Pyrometallurgy uses low temperatures; hydrometallurgy uses high heat.",
-              "Hydrometallurgy involves aqueous chemicals and low temperatures; pyrometallurgy involves thermal treatment and high temperatures.",
-              "Both require the absence of air at all times.",
-              "Hydrometallurgy is only for iron; pyrometallurgy is only for gold.",
+              "The Chalcolithic used only iron, while the Bronze Age used only gold.",
+              "The Bronze Age introduced alloys, which revolutionized societal structures and warfare.",
+              "The Chalcolithic era required higher temperatures than the Bronze Age.",
+              "The Bronze Age relied entirely on cold hammering native metals.",
             ],
-            correctAnswer: "Hydrometallurgy involves aqueous chemicals and low temperatures; pyrometallurgy involves thermal treatment and high temperatures.",
+            correctAnswer: "The Bronze Age introduced alloys, which revolutionized societal structures and warfare.",
           },
           {
             id: 32,
             type: "mcq",
-            question: "Why might a company choose hydrometallurgy over pyrometallurgy for a specific ore?",
+            question: 'Evaluate the role of "Galamsey" in the context of Ghanaian metallurgy. How do metallurgists help address this challenge?',
             options: [
-              "The ore is a sulphide that needs to be melted.",
-              "The metal of interest can be selectively dissolved at low temperatures, potentially saving energy or handling complex low-grade ores.",
-              "Pyrometallurgy is only used for reactive metals like aluminum.",
-              "Hydrometallurgy produces more slag.",
+              "By increasing the mining of gold.",
+              "By developing sustainable mining practices and improving water management systems.",
+              "By banning the use of all metals in local communities.",
+              "By promoting the use of ancient primitive smelting techniques.",
             ],
-            correctAnswer: "The metal of interest can be selectively dissolved at low temperatures, potentially saving energy or handling complex low-grade ores.",
+            correctAnswer: "By developing sustainable mining practices and improving water management systems.",
           },
           {
             id: 33,
             type: "mcq",
-            question: "Evaluate the necessity of refining after smelting. What is the most likely outcome if refining is skipped?",
+            question: 'Synthesizing the role of metallurgy in modern technology, which statement best describes its role in "Renewable Energy"?',
             options: [
-              "The metal will be pure but liquid.",
-              "The metal will contain impurities that may affect its properties and industrial use.",
-              "The metal will turn back into ore.",
-              "The metal will become a gas.",
+              "It is only used to build the frames of solar panels.",
+              "It provides advanced materials essential for turbines and conductive elements.",
+              "It is largely irrelevant as renewable energy uses non-metallic materials.",
+              "It is used to extract fossil fuels more efficiently.",
             ],
-            correctAnswer: "The metal will contain impurities that may affect its properties and industrial use.",
+            correctAnswer: "It provides advanced materials essential for turbines and conductive elements.",
           },
           {
             id: 34,
             type: "mcq",
-            question: "In the production of aluminum, electrowinning is performed on melts of their salts. Why is this categorized as electrometallurgy and not hydrometallurgy?",
+            question: 'How did the "Colonial Era" change the trajectory of metallurgy in Ghana compared to the "Pre-Colonial Era"?',
             options: [
-              "Because it uses fire.",
-              "Because it uses electrical energy for extraction, even though it involves a melt rather than an aqueous solution.",
-              "Because aluminum is a noble metal.",
-              "It is actually a form of roasting.",
+              "It introduced primitive methods of gold mining.",
+              "It established large-scale, modern mining and metallurgical techniques.",
+              "It led to the decline of gold mining in favor of agriculture.",
+              "It returned the region to Stone Age technologies.",
             ],
-            correctAnswer: "Because it uses electrical energy for extraction, even though it involves a melt rather than an aqueous solution.",
+            correctAnswer: "It established large-scale, modern mining and metallurgical techniques.",
           },
           {
             id: 35,
             type: "mcq",
-            question: "A facility is extracting silver (Ag) from Ag₂S. Based on the source, which sequence is most logical?",
+            question: 'Based on the sources, what is the most likely reason "Wootz steel" was historically significant?',
             options: [
-              "Calcination followed by leaching.",
-              "Roasting to remove sulphur, potentially followed by electrorefining for purity.",
-              "Smelting with water.",
-              "Using a lixiviant to create slag.",
+              "It was the first form of native iron found.",
+              "It represented early steel production through carburization processes.",
+              "It was used solely for Kente weights.",
+              "It could only be shaped using cold hammering.",
             ],
-            correctAnswer: "Roasting to remove sulphur, potentially followed by electrorefining for purity.",
+            correctAnswer: "It represented early steel production through carburization processes.",
           },
           {
             id: 36,
             type: "mcq",
-            question: "Which of the following is a similarity between roasting and calcination?",
+            question: 'Analyze the relationship between "Physical Metallurgy" and "Aerospace Engineering."',
             options: [
-              "Both require an absence of air.",
-              "Both are processes of heating the ore below its melting point to remove impurities.",
-              "Both produce the exact same gaseous byproduct.",
-              "Both are used exclusively for carbonate ores.",
+              "Physical metallurgy is not used in aerospace.",
+              "Aerospace requires an understanding of metal properties (Physical Metallurgy) to create superalloys.",
+              "Aerospace only uses extractive metallurgy to get metals.",
+              "Aerospace focuses on the chemistry of ores rather than the performance of the final metal.",
             ],
-            correctAnswer: "Both are processes of heating the ore below its melting point to remove impurities.",
+            correctAnswer: "Aerospace requires an understanding of metal properties (Physical Metallurgy) to create superalloys.",
           },
           {
             id: 37,
             type: "mcq",
-            question: "Determine the correct classification for a process that uses gaseous reduction to recover metal from a leach liquor.",
+            question: "Assess the impact of privatization in the 1980s and 90s on Ghana's mining industry.",
             options: [
-              "Pyrometallurgy",
-              "Hydrometallurgy (Metal Recovery stage)",
-              "Electrometallurgy",
-              "Mineral Processing",
+              "It led to the closure of all state-owned mines.",
+              "It attracted foreign investment and led to the establishment of new mines.",
+              "It halted the production of bauxite and manganese.",
+              "It forced the industry to return to lost-wax casting methods.",
             ],
-            correctAnswer: "Hydrometallurgy (Metal Recovery stage)",
+            correctAnswer: "It attracted foreign investment and led to the establishment of new mines.",
           },
           {
             id: 38,
             type: "mcq",
-            question: "What is the significance of selective extraction in hydrometallurgy?",
+            question: "Which of the following describes the synthesis of chemistry and physics in the field of Metallurgy?",
             options: [
-              "It means only the gangue is dissolved.",
-              "It allows for the separation of the specific metal of interest from a mixture of other minerals in the ore.",
-              "It ensures that the metal is never pure.",
-              "It requires the use of coke as a solvent.",
+              "Using biology to study the age of artifacts.",
+              "Understanding how atomic structures and chemical reactions influence metal production and performance.",
+              "Focusing purely on the economic value of metal exports.",
+              "Studying only the historical dates of the Iron Age.",
             ],
-            correctAnswer: "It allows for the separation of the specific metal of interest from a mixture of other minerals in the ore.",
+            correctAnswer: "Understanding how atomic structures and chemical reactions influence metal production and performance.",
           },
           {
             id: 39,
             type: "mcq",
-            question: "Synthesize the relationship between flux and slag. Which statement is correct?",
+            question: 'How did the discovery of "smelting" change human history during the Stone-to-Copper transition?',
             options: [
-              "Slag is added to the furnace to create flux.",
-              "Flux is a cleaning agent that reacts with impurities to form slag, which can then be separated from the metal.",
-              "Flux and slag are the same material at different temperatures.",
-              "Flux is a metal; slag is a gas.",
+              "It allowed humans to find gold for the first time.",
+              "It enabled the extraction of metal from ore using heat, moving beyond native metal usage.",
+              "It decreased the need for fire in industrial processes.",
+              "It made tools softer and more decorative.",
             ],
-            correctAnswer: "Flux is a cleaning agent that reacts with impurities to form slag, which can then be separated from the metal.",
+            correctAnswer: "It enabled the extraction of metal from ore using heat, moving beyond native metal usage.",
           },
           {
             id: 40,
             type: "mcq",
-            question: "Which metallurgical branch would be most effective for purifying gold to ultra-high purity levels?",
+            question: "Evaluate the scope of Metallurgical Engineering. It is best described as:",
             options: [
-              "Calcination",
-              "Roasting",
-              "Electrometallurgy (Electrorefining)",
-              "Smelting",
+              "The trade of minerals and jewelry.",
+              "A science that drives innovation across aerospace, automotive, energy, and healthcare.",
+              "A purely historical field focused on Stone Age tools.",
+              "The study of non-metallic materials like plastics and wood.",
             ],
-            correctAnswer: "Electrometallurgy (Electrorefining)",
+            correctAnswer: "A science that drives innovation across aerospace, automotive, energy, and healthcare.",
           },
         ];
 
         const ADMIN_PASSWORD = "admin123";
-        const TIME_PER_QUESTION = 20;
+        const TIME_PER_QUESTION = 22;
         const TAB_SWITCH_PENALTY = 0.5;
 
         useEffect(() => {
@@ -458,7 +506,7 @@
                             Highest Score
                           </p>
                           <p className="text-3xl font-bold text-green-700">
-                            {stats.highest}/11
+                            {stats.highest}/15
                           </p>
                         </div>
                         <div className="bg-yellow-50 rounded-lg p-4">
@@ -466,7 +514,7 @@
                             Average Score
                           </p>
                           <p className="text-3xl font-bold text-yellow-700">
-                            {stats.average}/11
+                            {stats.average}/15
                           </p>
                         </div>
                         <div className="bg-red-50 rounded-lg p-4">
@@ -474,7 +522,7 @@
                             Lowest Score
                           </p>
                           <p className="text-3xl font-bold text-red-700">
-                            {stats.lowest}/11
+                            {stats.lowest}/15
                           </p>
                         </div>
                       </div>
@@ -593,7 +641,7 @@
                       <div className="text-sm text-yellow-700">
                         <p className="font-semibold mb-1">Quiz Rules:</p>
                         <ul className="list-disc list-inside space-y-1">
-                          <li>11 questions total</li>
+                          <li>15 questions total</li>
                           <li>20 seconds per question</li>
                           <li>Auto-advances when time expires</li>
                           <li>Tab switching: -0.5 points each</li>
@@ -822,4 +870,3 @@
   </body>
 
 </html>
-
